--- a/CAD.html
+++ b/CAD.html
@@ -219,6 +219,50 @@
             </div>
 
             <hr class="border-gray-300 my-2">
+
+
+<!-- ✅ Budget & Impression Summary -->
+<div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+  <!-- Budget Summary -->
+  <div>
+    <h2 class="text-lg font-semibold text-gray-800 mb-2">Budget Summary</h2>
+    <div class="bg-gray-50 p-4 border border-gray-200 rounded-md space-y-2">
+      <div class="flex justify-between">
+        <span class="text-sm text-gray-600 font-medium">Total Invoice Budget</span>
+        <span class="text-sm text-gray-900 font-semibold">—</span>
+      </div>
+      <div class="flex justify-between">
+        <span class="text-sm text-gray-600 font-medium">Total Budget</span>
+        <span class="text-sm text-gray-900 font-semibold">—</span>
+      </div>
+      <div class="flex justify-between">
+        <span class="text-sm text-gray-600 font-medium">Budget Remaining</span>
+        <span class="text-sm text-gray-900 font-semibold">—</span>
+      </div>
+    </div>
+  </div>
+
+  <!-- Impression Summary -->
+  <div>
+    <h2 class="text-lg font-semibold text-gray-800 mb-2">Impression Summary</h2>
+    <div class="bg-gray-50 p-4 border border-gray-200 rounded-md space-y-2">
+      <div class="flex justify-between">
+        <span class="text-sm text-gray-600 font-medium">Total Invoice Impressions</span>
+        <span class="text-sm text-gray-900 font-semibold">1,500,000</span>
+      </div>
+      <div class="flex justify-between">
+        <span class="text-sm text-gray-600 font-medium">Total Impressions</span>
+        <span class="text-sm text-gray-900 font-semibold">1,500,000</span>
+      </div>
+      <div class="flex justify-between">
+        <span class="text-sm text-gray-600 font-medium">Impressions Remaining</span>
+        <span class="text-sm text-gray-900 font-semibold">—</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
             <!-- Budget Breakdown -->
 <section class="space-y-4 mt-2">
   <h2 class="text-xl font-semibold text-gray-800">Budget Breakdown</h2>
@@ -250,6 +294,13 @@
         <tbody id="hiddenBudgetRows" class="hidden">
           <tr class="border-b border-gray-100">
             <td class="px-4 py-2">Association Affinity</td>
+            <td class="px-4 py-2">Impressions</td>
+            <td class="px-4 py-2">—</td>
+            <td class="px-4 py-2">—</td>
+            <td class="px-4 py-2">—</td>
+          </tr>
+          <tr class="border-b border-gray-100">
+            <td class="px-4 py-2">Programmatic Video</td>
             <td class="px-4 py-2">Impressions</td>
             <td class="px-4 py-2">—</td>
             <td class="px-4 py-2">—</td>
